<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginTop="@dimen/small_distance"
        android:layout_marginBottom="@dimen/small_distance"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/white"
            android:text="@string/to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:inputType="textEmailAddress"
            android:textColorHint="@android:color/white"
            android:id="@+id/editMailTo"
            android:layout_marginLeft="@dimen/small_distance"
            android:hint="@string/email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/small_distance"
        android:layout_marginBottom="@dimen/small_distance"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@android:color/white"
            android:text="@string/object"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editSubject"
            android:textColorHint="@android:color/white"
            android:layout_marginLeft="@dimen/small_distance"
            android:hint="@string/text_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/small_distance"
        android:layout_marginBottom="@dimen/small_distance"
        android:text="@string/text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:textColorHint="@android:color/white"
        android:id="@+id/editContent"
        android:hint="@string/text_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>