<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout_main"
                android:padding="@dimen/extra_large_distance"
                android:background="@drawable/stroke_border"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/write_frame"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_marginTop="@dimen/large_distance"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_cancel"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/silver"
                        android:text="@string/cancel"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btn_ok"
                        android:layout_marginLeft="@dimen/small_distance"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:background="@color/main"
                        android:text="@string/ok"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/lbl_content"
                android:textStyle="bold|italic"
                android:textSize="@dimen/large_text_size"
                android:layout_margin="@dimen/large_distance"
                android:textColor="@android:color/white"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:id="@+id/icon"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>