<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_marginLeft="@dimen/small_distance"
                android:layout_marginRight="@dimen/small_distance"
                android:layout_marginBottom="@dimen/small_distance"
                android:padding="@dimen/small_distance"
                android:background="#8C595959"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/white"
                    android:text="@string/thistime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="@dimen/small_distance"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imgToday"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_weather"
                            android:layout_width="70dp"
                            android:layout_height="70dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_weight="2"
                        android:orientation="vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="@string/temp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"/>

                            <TextView
                                android:id="@+id/lblTempToday"
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="- - -"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:layout_marginTop="@dimen/small_distance"
                            android:layout_marginBottom="@dimen/small_distance"
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="0.01dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="@string/humidity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"/>

                            <TextView
                                android:id="@+id/lblHumidityToday"
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="- - -"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:layout_marginTop="@dimen/small_distance"
                            android:layout_marginBottom="@dimen/small_distance"
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="0.01dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="@string/windspeed"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"/>

                            <TextView
                                android:id="@+id/lblWindspeedToday"
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="- - -"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <View
                            android:layout_marginTop="@dimen/small_distance"
                            android:layout_marginBottom="@dimen/small_distance"
                            android:background="#FFFFFF"
                            android:layout_width="match_parent"
                            android:layout_height="0.01dp" />

                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="@string/visibility"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="0dp"/>

                            <TextView
                                android:id="@+id/lblVisibilityToday"
                                android:textSize="@dimen/normal_text_size"
                                android:textColor="@android:color/white"
                                android:text="- - -"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_marginTop="@dimen/small_distance"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp" />

                <TextView
                    android:id="@+id/lblDetailToday"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/white"
                    android:text="- - -"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_margin="@dimen/small_distance"
                android:padding="@dimen/small_distance"
                android:background="#8C595959"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textStyle="bold"
                    android:textSize="@dimen/normal_text_size"
                    android:textColor="@android:color/white"
                    android:text="@string/forecast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="@dimen/small_distance"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lblDate1"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="01/01/2014"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_weight="1"
                        android:src="@drawable/ic_weather"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/lblHigh1"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/lblLow1"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/a"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_marginTop="@dimen/small_distance"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lblDate2"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="01/01/2014"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_weight="1"
                        android:src="@drawable/ic_weather"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/lblHigh2"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/lblLow2"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/a"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <View
                    android:layout_marginTop="@dimen/small_distance"
                    android:layout_marginBottom="@dimen/small_distance"
                    android:background="#FFFFFF"
                    android:layout_width="match_parent"
                    android:layout_height="0.1dp" />

                <LinearLayout
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/lblDate3"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="01/01/2014"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_weight="1"
                        android:src="@drawable/ic_weather"
                        android:layout_width="30dp"
                        android:layout_height="30dp" />

                    <TextView
                        android:id="@+id/lblHigh3"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@android:color/white"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/lblLow3"
                        android:textSize="@dimen/normal_text_size"
                        android:textColor="@color/a"
                        android:text="- - -"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>